Fix for calendly-bubble to be accessible on mobile devices

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -202,7 +202,7 @@ footer {
 
 #calendly-bubble {
     position: fixed;
-    bottom: 20px;
+    bottom: 10px;
     right: 40px;
     background-color: black;
     color: white;
@@ -211,7 +211,7 @@ footer {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     width: 300px;
-    position: absolute;
+    position: sticky;
     cursor: pointer;
 }
 
